--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,16 @@
-body {
+ul  {
     display: flex;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
+    justify-content: space-evenly;
+    padding: 0;
+    list-style: none;
+}
+
+.center {
+    display: flex;
+    justify-content: center;
+    text-align: center;
 }
 
